<resources>
    <string name="app_name">Qwikpik</string>
    <string name="Title">Qwik Pik</string>
    <string name="btn_TakeAPik">Take A Pik!</string>
    <string name="btn_Gallery">Gallery</string>
    <string name="BackToMenu">Back to menu</string>
    <string name="btn_TakePicture">Take Picture</string>
    <string name="imageView_Picture_contentDesc">Image</string>
    <string name="name">name</string>
    <string name="save">Save</string>
    <string name="les_caract_res_sp_ciaux_ne_sont_pas_accept">* Les caractères spéciaux ne sont pas accepté</string>
</resources>
