<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CameraActivity">

    <Button
        android:id="@+id/btn_Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BackToMenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_TakePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/btn_TakePicture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView_Picture"
        android:layout_width="375dp"
        android:layout_height="551dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/imageView_Picture_contentDesc"
        app:layout_constraintBottom_toTopOf="@+id/textViewName"
        app:layout_constraintEnd_toEndOf="@+id/btn_TakePicture"
        app:layout_constraintStart_toStartOf="@+id/btn_TakePicture" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_TakePicture"
        app:layout_constraintEnd_toEndOf="@+id/btn_TakePicture"
        app:layout_constraintStart_toStartOf="@+id/btn_TakePicture" />
</androidx.constraintlayout.widget.ConstraintLayout>